# HW-Router

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/carrot/: __init__.py  carrot.py
baselines/irt/: llm_profile.csv  mirt_hw.snapshot  mirt_llm.meta.json  train_irt.py
baselines/umr/: __init__.py  umr_router.py
configs/: gpu_model_map_h100.yaml  test_small_models.yaml
data/: evaluation_dataset_processed_full_with_umr_irt.csv
data/data_quality/: Llama-3.1-8B-Instruct.csv  Mistral-7B-Instruct-v0.3.csv  Phi-3-mini-128k-instruct.csv  Qwen2.5-14B-Instruct.csv  Qwen2.5-3B-Instruct.csv
docs/: CUSTOM_HARDWARE_GUIDE.md
examples/: add_custom_router.py  quickstart.py
hw_router/: __init__.py  constants.py  cost_predictor.py  hardware_monitor.py  load_patterns.py  model_registry.py  routers.py
pipeline/: README.md
pipeline/data_collection/: build_eval_dataset.py  build_hardware_cost_dataset.py  compute_normalization.py
pipeline/data_preparation/: build_umr_training_csv.py  combine_datasets.py  load_longbench.py  load_mixinstruct.py  save_prompt_embeddings.py
pipeline/eval_processing/: process_eval_dataset.py  update_eval_with_irt.py  update_eval_with_umr.py
pipeline/evaluation/: eval_lambda_sweep.py  eval_realtime_sweep.py  eval_runtime_router.py
pipeline/training/: train_cost_model.py
